[gd_scene load_steps=54 format=2]

[ext_resource path="res://images/player/PlayerStand.png" type="Texture" id=1]
[ext_resource path="res://images/player/PlayerWalk.png" type="Texture" id=2]
[ext_resource path="res://images/player/PlayerWalk1_1.png" type="Texture" id=3]
[ext_resource path="res://images/player/Shatter.png" type="Texture" id=4]
[ext_resource path="res://objects/Player.gd" type="Script" id=5]
[ext_resource path="res://images/player/Jump.png" type="Texture" id=6]
[ext_resource path="res://images/player/Fall.png" type="Texture" id=7]
[ext_resource path="res://objects/SlashAttack.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Flower.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/AnvilStomp.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/Beachball.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/shards/PlayerShards.tscn" type="PackedScene" id=12]
[ext_resource path="res://objects/Floppydisk.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/Attacks/Wings/Wing0_1.png" type="Texture" id=14]
[ext_resource path="res://images/Attacks/Wings/Wing2_1.png" type="Texture" id=15]
[ext_resource path="res://images/Attacks/Wings/Wing1_1.png" type="Texture" id=16]
[ext_resource path="res://images/Attacks/Wings/Wing3.png" type="Texture" id=17]
[ext_resource path="res://rooms/Menus/RunStatsReciept.tscn" type="PackedScene" id=18]
[ext_resource path="res://images/player/Spin/Spin3.png" type="Texture" id=19]
[ext_resource path="res://images/player/Spin/Spin2.png" type="Texture" id=20]
[ext_resource path="res://images/player/Spin/Spin1.png" type="Texture" id=21]
[ext_resource path="res://images/player/Spin/Spin.png" type="Texture" id=22]
[ext_resource path="res://images/Effects/Death Light/Death Effect Light 3.png" type="Texture" id=23]
[ext_resource path="res://images/Attacks/Baseball/Baseball0.png" type="Texture" id=24]
[ext_resource path="res://images/Attacks/Baseball/Baseball1.png" type="Texture" id=25]
[ext_resource path="res://images/player/ground attack/Ground Attack3.png" type="Texture" id=26]
[ext_resource path="res://images/player/helicopterkick/helicopterkick3.png" type="Texture" id=27]
[ext_resource path="res://images/player/helicopterkick/helicopterkick2.png" type="Texture" id=28]
[ext_resource path="res://images/player/helicopterkick/helicopterkick.png" type="Texture" id=29]
[ext_resource path="res://images/Effects/Death Light/Death Effect Light.png" type="Texture" id=30]
[ext_resource path="res://images/Effects/Death Light/Death Effect Light 2.png" type="Texture" id=31]
[ext_resource path="res://images/Effects/Death Light/Death Effect Light 4.png" type="Texture" id=32]
[ext_resource path="res://objects/Item Objects/Lilipad.tscn" type="PackedScene" id=33]
[ext_resource path="res://images/player/Bull/Bull Charge.png" type="Texture" id=34]
[ext_resource path="res://images/player/Bull/Bull Charge 1.png" type="Texture" id=35]
[ext_resource path="res://objects/Item Objects/BullStar.tscn" type="PackedScene" id=36]
[ext_resource path="res://objects/Item Objects/TentacleHolder.tscn" type="PackedScene" id=37]
[ext_resource path="res://sound/sfx/impactMining_002.ogg" type="AudioStream" id=38]
[ext_resource path="res://sound/sfx/Anvil Slam.ogg" type="AudioStream" id=39]
[ext_resource path="res://sound/sfx/Ding Before Start Attack.ogg" type="AudioStream" id=40]
[ext_resource path="res://sound/sfx/Bull Hit.ogg" type="AudioStream" id=41]
[ext_resource path="res://sound/sfx/Bull Shoot.ogg" type="AudioStream" id=42]
[ext_resource path="res://sound/sfx/flap.ogg" type="AudioStream" id=43]
[ext_resource path="res://sound/sfx/Frog Jump.ogg" type="AudioStream" id=44]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 31 ), ExtResource( 23 ), ExtResource( 32 ), ExtResource( 32 ) ],
"loop": false,
"name": "deatheffect",
"speed": 11.0
} ]

[sub_resource type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 8 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Shatter",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "GroundAttack",
"speed": 65.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "BullRam",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "Helicopter Kick",
"speed": 30.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "Spin",
"speed": 40.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 0.1
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 92, 74 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 44.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 52, 36 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )
attack = ExtResource( 8 )
shard = ExtResource( 12 )
stats = ExtResource( 18 )
watering_can_offset = 25
bull_boost_ground = 2608
bull_boost_air = 1071
bull_knock_x = 685
bull_knock_y = 474
beachball = ExtResource( 11 )
flower = ExtResource( 9 )
anvil_stomp = ExtResource( 10 )
floppy_disk = ExtResource( 13 )
lilipad = ExtResource( 33 )
bull_star = ExtResource( 36 )
tentacle_holder = ExtResource( 37 )
bat_decay = 8
min_bat_flap = 82

[node name="DeathEffect" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.972549, 0.972549, 0.972549, 1 )
scale = Vector2( 0.828342, 0.828342 )
frames = SubResource( 9 )
animation = "deatheffect"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 7 )
position = Vector2( 11, -37 )
frames = SubResource( 11 )
animation = "Walk"
offset = Vector2( 0, -1.032 )

[node name="BaseballBat" type="AnimatedSprite" parent="AnimatedSprite"]
visible = false
position = Vector2( -55, 13 )
frames = SubResource( 12 )

[node name="BullPosHolder" type="Position2D" parent="AnimatedSprite"]

[node name="BullHitbox" type="Area2D" parent="AnimatedSprite/BullPosHolder"]
position = Vector2( 119, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/BullPosHolder/BullHitbox"]
modulate = Color( 0, 1, 0.392157, 1 )
position = Vector2( -52, 15 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MushroomStomp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MushroomStomp"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 50 )
shape = SubResource( 13 )

[node name="BatWings" type="Node2D" parent="."]
visible = false
position = Vector2( -122, -46 )

[node name="BatWingsL" type="AnimatedSprite" parent="BatWings"]
position = Vector2( 7, -10 )
frames = SubResource( 14 )
playing = true

[node name="BatWingsR" type="AnimatedSprite" parent="BatWings"]
position = Vector2( 239, -10 )
frames = SubResource( 14 )
playing = true
flip_h = true

[node name="DropCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 8

[node name="FeetPos" type="Position2D" parent="."]
position = Vector2( 0, 35 )

[node name="BallAimPos" type="Position2D" parent="."]
position = Vector2( 0, -164 )

[node name="Timers" type="Node" parent="."]

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 0.748
one_shot = true

[node name="StatTimer" type="Timer" parent="Timers"]
wait_time = 1.4
one_shot = true

[node name="WateringCanTimer" type="Timer" parent="Timers"]
wait_time = 0.284
autostart = true

[node name="InvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 1.1
one_shot = true

[node name="ShortInvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 0.843
one_shot = true

[node name="BullChargeTimer" type="Timer" parent="Timers"]
wait_time = 0.078
one_shot = true

[node name="BullRecoverTimer" type="Timer" parent="Timers"]
wait_time = 0.607
one_shot = true

[node name="SealTimer" type="Timer" parent="Timers"]
wait_time = 0.761
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="InitialShatterSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 38 )
volume_db = 4.262
bus = "SoundEffects"

[node name="AttackSound" type="AudioStreamPlayer" parent="Sounds"]
bus = "SlashAttack"

[node name="AnvilSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 39 )
volume_db = -6.29
bus = "SoundEffects"

[node name="BullAttackDing" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 40 )
volume_db = -0.762
bus = "SoundEffects"

[node name="BullShoot" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 42 )
volume_db = 1.61
bus = "SoundEffects"

[node name="BullHit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 41 )
volume_db = 7.684
bus = "SoundEffects"

[node name="Flap" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 43 )
volume_db = 3.976
bus = "SoundEffects"

[node name="FrogJump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 44 )
volume_db = 5.967
bus = "SoundEffects"

[node name="Break" type="AudioStreamPlayer" parent="Sounds"]
volume_db = 8.525
bus = "Break"

[connection signal="animation_finished" from="DeathEffect" to="." method="_on_DeathEffect_animation_finished"]
[connection signal="body_entered" from="AnimatedSprite/BullPosHolder/BullHitbox" to="." method="_on_BullHitbox_body_entered"]
[connection signal="body_entered" from="MushroomStomp" to="." method="_on_MushroomStomp_body_entered"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Timers/StatTimer" to="." method="_on_StatTimer_timeout"]
[connection signal="timeout" from="Timers/WateringCanTimer" to="." method="_on_WateringCanTimer_timeout"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="." method="_on_invincibilityTimer_timeout"]
[connection signal="timeout" from="Timers/ShortInvincibilityTimer" to="." method="_on_ShortInvincibilityTimer_timeout"]
[connection signal="timeout" from="Timers/BullChargeTimer" to="." method="_on_BullChargeTimer_timeout"]
[connection signal="timeout" from="Timers/BullRecoverTimer" to="." method="_on_BullRecoverTimer_timeout"]
[connection signal="timeout" from="Timers/SealTimer" to="." method="_on_SealTimer_timeout"]
